# cvt-demo

./: .gitignore  .markdownlint.json  .tool-versions  CLAUDE.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml
.claude/commands/: inteview.md
.github/actions/setup-cvt/: action.yml
.github/workflows/: can-i-deploy.yml  consumer-only-test.yml  test.yml
consumer-1/: .npmrc  Dockerfile  jest.config.js  main.js  package-lock.json  package.json
consumer-1/tests/: README.md  adapter.test.js  manual.test.js  mock.test.js  registration.test.js
consumer-2/: Dockerfile  main.py  pyproject.toml
consumer-2/tests/: README.md  conftest.py  test_adapter.py  test_manual.py  test_mock.py  test_registration.py
consumer-3/: Dockerfile  pom.xml
consumer-3/src/main/java/demo/consumer3/: Main.java
consumer-3/src/test/java/demo/consumer3/: AdapterValidationTest.java  ManualValidationTest.java  (+2 more)
consumer-4/: Dockerfile  go.mod  go.sum  main.go
consumer-4/tests/: adapter_test.go  manual_test.go  mock_test.go  registration_test.go  testutil_test.go
docs/plans/: 2026-02-25-consumer-3-4-design.md  2026-02-25-consumer-3-4-implementation.md
docs/presentation/: notes.md  presentation.md
nodejs/: .gitignore  package.json
producer/: Dockerfile  calculator-api-v2-breaking.json  calculator-api-v2-breaking.yaml  calculator-api.json  calculator-api.yaml  go.mod  go.sum  main.go
producer/handlers/: calculator.go
producer/tests/: README.md  compliance_test.go  integration_test.go  middleware_test.go  registry_test.go  testutil_test.go
