[project]
name = "consumer-2"
version = "1.0.0"
description = "Consumer 2 CLI - Uses add, multiply, and divide operations from calculator API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
cvt = [
    "cvt-sdk",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
consumer-2 = "main:main"

[tool.uv.sources]
cvt-sdk = { url = "https://github.com/sahina/cvt/releases/download/v0.1.2/cvt_sdk-0.1.2-py3-none-any.whl" }
